snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-all.jar.sha512
4c553dfba0493335826a44485d96514f50a14647cb38684a5326fef0bd1c2e5f9e9c9c3824337dd3875ae597eb989848111a8b801c5370090c6dfef305917063